# weather-app-C

./: CMakeLists.txt  README.md  readme.me
SourceFiles/: WeaterData.cpp  WheaterData.cpp  date.cpp  details.cpp  firebase.cpp  list.cpp  main.cpp  mainpanel.cpp  mainwindow.cpp  search.cpp  weatherbar.cpp
headerFiles/: WeaterData.h  WheaterData.h  date.h  details.h  firebase.h  mainwindow.h  mainwindowUi.h  search.h  searchUi.h  weatherbar.h
headerFiles/Ui/: dateUi.h  detailsUi.h  listUi.h  mainpanelUi.h  mainwindowUi.h  searchUi.h  weatherbarUi.h
uiFiles/: date.ui  details.ui  list.ui  mainpanel.ui  mainwindow.ui  search.ui  weatherbar.ui
